# compendiumscribe

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json  vision.md
.github/workflows/: python-package.yml  python-publish.yml
docs/: ARCHITECTURE.md  QUALITY.md  README.md  RELEASING.md
src/compendiumscribe/: __init__.py  cli.py  create_areas_of_research.prompt.md  create_compendium.py  create_llm_clients.py  model.py  research_domain.py  skill_output.py
src/compendiumscribe/agent_contracts/: __init__.py  contract4agents.registry.json  contract4agents.targets.toml
src/compendiumscribe/agent_contracts/agents/: research.contract
src/compendiumscribe/agent_contracts/types/: research.contract
src/compendiumscribe/compendium/: __init__.py  compendium.py  entities.py  html_renderer.py  html_site_renderer.py  payload_parser.py  pdf.py  plain_text.py  text_utils.py  xml_parser.py  xml_serializer.py
src/compendiumscribe/prompts/: 10_topic_blueprint.prompt.md  20_deep_research.prompt.md  3_create_research_questions.prompt.md  4_3_4_generate_prerequisites.prompt.md  4_4_generate_topic_summary.prompt.md  7_generate_topic.prompt.md  8_generate_domain_summary.prompt.md  generate_topics_from_research_findings.prompt.md  planner_agent.prompt.md  research_manager_agent.prompt.md  section_research_agent.prompt.md  synthesis_agent.prompt.md  topic_blueprint.prompt.md  verifier_agent.prompt.md
src/compendiumscribe/research/: __init__.py  cancellation.py  config.py  costs.py  errors.py  execution.py  orchestrator.py  parsing.py  planning.py  pricing.py  progress.py  trace.py  utils.py
src/compendiumscribe/research/agents_workflow/: __init__.py  agents.py  artifacts.py  contract_trace.py  costing.py  orchestrator.py  persistence.py  runner.py  source_ledger.py  state.py
src/compendiumscribe/research/data/: pricing.standard.json
src/compendiumscribe/research/execution/: __init__.py  core.py  polling.py  stream_events.py  streaming.py
tests/: conftest.py  test_cli.py  test_create_llm_clients.py  test_repo_legibility.py  test_research_domain_utils.py  test_xml_conversion.py
tests/compendium/: test_compendium.py  test_html_site_renderer.py  test_skill_output.py  test_text_utils.py  test_xml_parser.py
tests/research/: test_agent_contracts.py  test_agents_artifacts.py  test_cancellation.py  test_config.py  test_contract_trace.py  test_costs.py  test_execution.py  test_orchestrator.py  test_parsing.py  test_planning.py  test_pricing.py  test_prompt_loading.py  test_state.py  test_trace.py
tests/research/execution/: test_core.py  test_stream_events.py
