[project]
name = "compendiumscribe"
dynamic = ["version"]
description = "A package for automating the creation of comprehensive and organized domain knowledge bases for AI applications."
authors = [
    {name = "B.T. Franklin", email = "brandon.franklin@gmail.com"},
]
dependencies = [
    "openai>=2.33.0",
    "python-dotenv>=1.2.2",
    "click>=8.3.3",
    "mistune>=3.2.0",
    "fpdf2>=2.8.7",
    "openai-agents>=0.15.1",
    "pydantic>=2.13.3",
]
requires-python = ">=3.12"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/btfranklin/compendiumscribe"
Issues = "https://github.com/btfranklin/compendiumscribe/issues"
Changelog = "https://github.com/btfranklin/compendiumscribe/releases"
Repository = "https://github.com/btfranklin/compendiumscribe.git"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[project.scripts]
compendium = "compendiumscribe.cli:cli"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
excludes = ["tests/**"]

[tool.pdm.scripts]
test = "pytest"
lint = "ruff check src tests"
